# Xplane-TrafficRunwayMonitor

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: Plugin.cpp
src/core/: ActiveRunway.cpp  ActiveRunway.h  AdvisoryFormat.cpp  AdvisoryFormat.h  Aggregator.cpp  Aggregator.h  AglResolver.cpp  AglResolver.h  AptDat.cpp  AptDat.h  Cifp.cpp  Cifp.h  EventLog.cpp  EventLog.h  FmsOrigin.cpp  FmsOrigin.h  Format.cpp  Format.h  GeoMath.cpp  GeoMath.h  PhaseClassifier.cpp  PhaseClassifier.h  RunwayMatcher.cpp  RunwayMatcher.h  ScenerypacksIni.cpp  ScenerypacksIni.h  SightingTracker.cpp  SightingTracker.h  SimbriefOfp.cpp  SimbriefOfp.h  SlotAssignment.cpp  SlotAssignment.h  SlotValidity.cpp  SlotValidity.h  TrafficFlow.h  TrendFilter.cpp  TrendFilter.h  Weather.cpp  Weather.h  WindEstimate.cpp  (+1 more)
src/sdk/: AptDatLoader.cpp  AptDatLoader.h  CifpLoader.cpp  CifpLoader.h  FmsOrigin.cpp  FmsOrigin.h  Log.cpp  Log.h  LtapiSource.cpp  LtapiSource.h  PluginPath.cpp  PluginPath.h  SettingsStore.cpp  SettingsStore.h  SimbriefClient.cpp  SimbriefClient.h  TcasSource.cpp  TcasSource.h  TerrainProbe.cpp  TerrainProbe.h  Weather.cpp  Weather.h
src/ui/: MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  Widgets.cpp  Widgets.h
tests/: CMakeLists.txt  test_ActiveRunway.cpp  test_AdvisoryFormat.cpp  test_Aggregator.cpp  test_AglResolver.cpp  test_AptDat.cpp  test_Cifp.cpp  test_EventLog.cpp  test_FmsOrigin.cpp  test_Format.cpp  test_GeoMath.cpp  test_PhaseClassifier.cpp  test_RunwayMatcher.cpp  test_ScenerypacksIni.cpp  test_SightingTracker.cpp  test_SimbriefOfp.cpp  test_SlotAssignment.cpp  test_SlotValidity.cpp  test_TrendFilter.cpp  test_Weather.cpp  test_WindEstimate.cpp
